@@ -86,7 +86,7 @@ public class ERXLongPrimaryKeyFactory {
 			if (log.isDebugEnabled()) {
 				log.debug("new pk value for "+ename+"("+((ERXModelGroup) EOModelGroup.defaultGroup()).entityCode(ename)+"), db value = "+pk+", new value = "+realPk);
 			}
-			pk = new Long(realPk);
+			pk = Long.valueOf(realPk);
 		}
 		if (encodeEntityInPkValue()) {
 			long l = pk.longValue();
@@ -103,7 +103,7 @@ public class ERXLongPrimaryKeyFactory {
 			if (log.isDebugEnabled()) {
 				log.debug("new pk value for "+ename+"("+((ERXModelGroup) EOModelGroup.defaultGroup()).entityCode(ename)+"), db value = "+pk+", new value = "+realPk);
 			}
-			pk = new Long(realPk);
+			pk = Long.valueOf(realPk);
 		}
 		return pk;
 	}
@@ -143,7 +143,7 @@ public class ERXLongPrimaryKeyFactory {
 
 	private int hostCode() {
 		if (hostCode == null) {
-			hostCode = new Integer(ERXSystem.getProperty(HOST_CODE_KEY));
+			hostCode = Integer.valueOf(ERXSystem.getProperty(HOST_CODE_KEY));
 		}
 		return hostCode.intValue();
 	}
@@ -266,7 +266,7 @@ public class ERXLongPrimaryKeyFactory {
 							con.createStatement().executeUpdate("insert into pk_table (eoentity_name, pk_value) values ('" + entityName + "', " + (pk+increasePkBy) + ")");
 						}
 						con.commit();
-						return new Long(pk);
+						return Long.valueOf(pk);
 					} catch(SQLException ex) {
 						String s = ex.getMessage().toLowerCase();
 						boolean creationError = (s.indexOf("error code 116") != -1); // frontbase?
@@ -399,7 +399,7 @@ public class ERXLongPrimaryKeyFactory {
 		long value = pkValueStart.longValue();
 		log.debug("filling pkCache for " + ename + ", starting at " + value);
 		for (int i = increaseBy(); i > 0;  i--) {
-			s.push(new Long(i + value));
+			s.push(Long.valueOf(i + value));
 		}
 	}
 
@@ -412,7 +412,7 @@ public class ERXLongPrimaryKeyFactory {
 	 */
 	private int increaseBy() {
 		if (increaseBy == null) {
-			increaseBy = new Integer(ERXProperties.intForKeyWithDefault("er.extensions.ERXLongPrimaryKeyFactory.increaseBy", 1000));
+			increaseBy = Integer.valueOf(ERXProperties.intForKeyWithDefault("er.extensions.ERXLongPrimaryKeyFactory.increaseBy", 1000));
 		}
 		return increaseBy.intValue();
 	}
