@@ -86,7 +86,7 @@ public class ERXJDBCMigrationLock implements IERXMigrationLock {
 			try {
 				EOModel dbUpdaterModel = dbUpdaterModelWithModel(model, adaptor);
 				NSMutableDictionary<String, Object> row = new NSMutableDictionary<String, Object>();
-				row.setObjectForKey(new Integer(1), "updateLock");
+				row.setObjectForKey(Integer.valueOf(1), "updateLock");
 				row.setObjectForKey(lockOwnerName, "lockOwner");
 				EOEntity dbUpdaterEntity = dbUpdaterModel.entityNamed(migrationTableName(adaptor));
 				try {
@@ -107,7 +107,7 @@ public class ERXJDBCMigrationLock implements IERXMigrationLock {
 					}
 					if (nextRow == null) {
 						if (createIfMissing()) {
-							row.setObjectForKey(new Integer(initialVersionForModel(model)), "version");
+							row.setObjectForKey(Integer.valueOf(initialVersionForModel(model)), "version");
 							row.setObjectForKey(model.name(), "modelName");
 							try {
 								channel.insertRow(row, dbUpdaterEntity);
@@ -173,7 +173,7 @@ public class ERXJDBCMigrationLock implements IERXMigrationLock {
 		try {
 			EOModel dbUpdaterModel = dbUpdaterModelWithModel(model, adaptor);
 			NSMutableDictionary<String, Object> row = new NSMutableDictionary<String, Object>();
-			row.setObjectForKey(new Integer(0), "updateLock");
+			row.setObjectForKey(Integer.valueOf(0), "updateLock");
 			row.setObjectForKey(NSKeyValueCoding.NullValue, "lockOwner");
 			EOEntity dbUpdaterEntity = dbUpdaterModel.entityNamed(migrationTableName(adaptor));
 			channel.adaptorContext().commitTransaction();
@@ -246,7 +246,7 @@ public class ERXJDBCMigrationLock implements IERXMigrationLock {
 		try {
 			EOModel dbUpdaterModel = dbUpdaterModelWithModel(model, adaptor);
 			NSMutableDictionary<String, Object> row = new NSMutableDictionary<String, Object>();
-			row.setObjectForKey(new Integer(versionNumber), "version");
+			row.setObjectForKey(Integer.valueOf(versionNumber), "version");
 			EOEntity dbUpdaterEntity = dbUpdaterModel.entityNamed(migrationTableName(adaptor));
 			int count;
 			try {
